Fix: Removed Stretched Images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,11 +142,21 @@ nav a:hover {
 
 .card a {
     text-align: center;
+    text-decoration: none;
+    color: #464653;
 }
 
 .card a img {
     width: 100%;
     height: 140px;
+}
+
+.card h3 {
+    font-size: 90%;
+}
+
+.card a:hover {
+    color: #FF8066;
 }
 
 h1 {
